--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "homepage": "https://github.com/frisos-todo-apps/node-ssr-todo#readme",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
